implement mvn test